# skeleton

./: README.rst  install.sh
c/: Makefile  README
c++/: Makefile
c++/boost-sample/: CMakeLists.txt  Makefile
c++/boost-sample/lib/: boost
c++/cmake/: .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Makefile
c++/cmake/lib/: gtest
c++/cmake/src/: main.cpp  tmp_lib.cpp
c++/cmake/test/: CMakeLists.txt
c++/cmake/test/lib/: gmock
c++/make/: Makefile
c++/src/: main.cpp
c/exec/: Makefile
c/shared-library/: Makefile  README
c/shared-library/src/: main.c
c/src/: main.c
gwt/: README.rst  build.xml  ivy.xml  lib
gwt/src/com/example/client/: Main.java
gwt/src/com/example/skeleton/: Main.gwt.xml
gwt/src/com/example/skeleton/client/: Main.java
gwt/war/: index.html
lua/: Makefile  README
lua/src/: main.lua
